--- a/demo1：穿透框/Transfer.html
+++ b/demo1：穿透框/Transfer.html
@@ -6,7 +6,7 @@
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title></title>
-    <script type="text/javascript" src="http://vuejs.org/js/vue.min.js"></script>
+    <script type="text/javascript" src="https://vuejs.org/js/vue.min.js"></script>
     <style>
       p {
         margin: 0;
